--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "express": "~4.13.1",
     "express-messages": "^1.0.0",
     "express-session": "^1.13.0",
+    "knex": "^0.10.0",
     "moment-timezone": "^0.5.3",
     "morgan": "~1.6.1",
+    "pg": "^4.5.3",
     "serve-favicon": "~2.3.0"
   }
 }
