--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "robots_app",
   "version": "0.0.0",
   "private": true,
+  "engines":{
+    "node":"5.9.1",
+    "npm":"3.7.3"
+  },
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
+    "heroku-postbuild": "knex migrate:latest --knexfile db/config.js && knex seed:run --knexfile db/config.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
