--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "robots_app",
   "version": "0.0.0",
   "private": true,
-  "engines":{
-    "node":"5.9.1",
-    "npm":"3.7.3"
+  "engines": {
+    "node": "5.9.1",
+    "npm": "3.7.3"
   },
   "scripts": {
     "start": "nodemon ./bin/www",
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "connect-flash": "^0.1.1",
+    "connect-session-knex": "^1.0.22",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
